; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_unicode.c_unichar_isident.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_unicode.c_unichar_isident.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@attr = common dso_local global i32* null, align 8
@FL_ALPHA = common dso_local global i32 0, align 4
@FL_DIGIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unichar_isident(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 128
  br i1 %4, label %5, label %21

5:                                                ; preds = %1
  %6 = load i32*, i32** @attr, align 8
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %6, i64 %8
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @FL_ALPHA, align 4
  %12 = load i32, i32* @FL_DIGIT, align 4
  %13 = or i32 %11, %12
  %14 = and i32 %10, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %5
  %17 = load i32, i32* %2, align 4
  %18 = icmp eq i32 %17, 95
  br label %19

19:                                               ; preds = %16, %5
  %20 = phi i1 [ true, %5 ], [ %18, %16 ]
  br label %21

21:                                               ; preds = %19, %1
  %22 = phi i1 [ false, %1 ], [ %20, %19 ]
  %23 = zext i1 %22 to i32
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
